Bugfix for the case if _div is undefined. Add CSS style z-index:50; to bring markers in front of the trackmap #86

--- a/css/pcars.css
+++ b/css/pcars.css
@@ -159,6 +159,7 @@
 		
 		.stations, .stations svg {
 			position: absolute;
+			z-index:  50;
 		}
 
 		.stations svg {
